--- a/atoms/alerts/alerts.html
+++ b/atoms/alerts/alerts.html
@@ -9,6 +9,19 @@
     <link href="https://fonts.googleapis.com/css?family=Ovo|Montserrat:400,700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
     <link href="../../css/master.css" rel="stylesheet">
+    <style>
+      .row.fifty:after {
+        display: block;
+        width: 100%;
+        height: 1px;
+        margin: 1rem auto;
+        background-color: #e4e8ed;
+        content: "";
+      }
+      .row.fifty.no-line:after {display: none;}
+      .row.fifty:last-of-type:after {display: none;}
+      footer .row.fifty:after {display: none;}
+    </style>
   </head>
   <body data-aos="fade-in">
     <header>
@@ -29,8 +42,82 @@
       </nav>
     </header>
     <main>
+      <section class="alerts">
+        <div class="error">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" class="warning"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-1-5h2v2h-2v-2zm0-8h2v6h-2V7z"></svg>
+          <p>This is an error alert message</p>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" class="close"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm0-9.414l2.828-2.829 1.415 1.415L13.414 12l2.829 2.828-1.415 1.415L12 13.414l-2.828 2.829-1.415-1.415L10.586 12 7.757 9.172l1.415-1.415L12 10.586z" /></svg>
+        </div>
+        <div class="success">
+          <p>This is a success alert message</p>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" class="close"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm0-9.414l2.828-2.829 1.415 1.415L13.414 12l2.829 2.828-1.415 1.415L12 13.414l-2.828 2.829-1.415-1.415L10.586 12 7.757 9.172l1.415-1.415L12 10.586z" /></svg>
+        </div>
+        <div class="confirm">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" class="warning"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-1-5h2v2h-2v-2zm0-8h2v6h-2V7z"></svg>
+          <p>This is a confirmation alert message. Are you sure you want to continue?</p>
+          <div class="buttons">
+            <button type="button" class="no">No</button>
+            <button type="button" class="yes">Yes</button>
+          </div>
+        </div>
+      </section>
       <section class="row wide">
         <h1 class="title">Alerts</h1>
+        <p>Alerts convey important information related to the state of your app or the device and often request feedback. An alert consists of a message, one or more buttons, and optional text fields for gathering input.</p>
+          <p>Messages are fixed to the top of the window and can be triggered by any means necessary, and most messages will dismiss themselves &ndash; unless they require the user to confirm an action &ndash; after 10 seconds or the user can dismiss them using the close icon.</p>
+        <div class="row fifty">
+          <div class="column">
+            <h2>Error Message</h2>
+            <p>An error message provides contextual information displayed when an unexpected condition occurs.</p>
+            <button type="button" class="show-error">Show Error</button>
+          </div>
+          <div class="column">
+            <figure>
+              <figcaption>html</figcaption>
+<pre><code>&lt;div class=&quot;error&quot;&gt;
+  &lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot; class=&quot;warning&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-1-5h2v2h-2v-2zm0-8h2v6h-2V7z&quot;&gt;&lt;/svg&gt;
+  &lt;p&gt;This is an error alert message&lt;/p&gt;
+  &lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot; class=&quot;close&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm0-9.414l2.828-2.829 1.415 1.415L13.414 12l2.829 2.828-1.415 1.415L12 13.414l-2.828 2.829-1.415-1.415L10.586 12 7.757 9.172l1.415-1.415L12 10.586z&quot; /&gt;&lt;/svg&gt;
+&lt;/div&gt;</code></pre>
+            </figure>
+          </div>
+        </div>
+        <div class="row fifty">
+          <div class="column">
+            <h2>Success Message</h2>
+            <p>A success message provides assurances to the user that an intended action is successful.</p>
+            <button type="button" class="show-success">Show Success</button>
+          </div>
+          <div class="column">
+            <figure>
+              <figcaption>html</figcaption>
+<pre><code>&lt;div class=&quot;success&quot;&gt;
+  &lt;p&gt;This is a success alert message&lt;/p&gt;
+  &lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot; class=&quot;close&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm0-9.414l2.828-2.829 1.415 1.415L13.414 12l2.829 2.828-1.415 1.415L12 13.414l-2.828 2.829-1.415-1.415L10.586 12 7.757 9.172l1.415-1.415L12 10.586z&quot; /&gt;&lt;/svg&gt;
+&lt;/div&gt;</code></pre>
+            </figure>
+          </div>
+        </div>
+        <div class="row fifty">
+          <div class="column">
+            <h2>Confirmation Message</h2>
+            <p>A confirmation message provides the user an opportunity to confirm a requested action.</p>
+            <button type="button" class="show-confirm">Show Confirm</button>
+          </div>
+          <div class="column">
+            <figure>
+              <figcaption>html</figcaption>
+<pre><code>&lt;div class=&quot;confirm&quot;&gt;
+  &lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot; class=&quot;warning&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-1-5h2v2h-2v-2zm0-8h2v6h-2V7z&quot;&gt;&lt;/svg&gt;
+  &lt;p&gt;This is a confirmation alert message&lt;/p&gt;
+  &lt;div class=&quot;buttons&quot;&gt;
+    &lt;button type=&quot;button&quot; class=&quot;no&quot;&gt;No&lt;/button&gt;
+    &lt;button type=&quot;button&quot; class=&quot;yes&quot;&gt;Yes&lt;/button&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</code></pre>
+            </figure>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
