--- a/style/colors/colors.html
+++ b/style/colors/colors.html
@@ -102,7 +102,7 @@
   <pre><code>$error: #c00c00;</code></pre>
                   </div>
                 </div>
-                <div class="color-card" style="margin-bottom: 0;">
+                <div class="color-card">
                   <div class="color-sample" style="background-color: #008000;"></div>
                   <div class="color-values">
   <pre><code>$valid: #008000;</code></pre>
