--- a/molecules/forms/forms.html
+++ b/molecules/forms/forms.html
@@ -35,9 +35,212 @@
     </header>
     <main>
       <article>
-        <h1>Article Title</h1>
+        <h1 class="title">Forms and Inputs</h1>
+        <p>The &lt;input&gt; element is used to create interactive controls for forms in order to accept or retrieve data from/for the user.</p>
+        <p>The function or value of an <code>&lt;input&gt;</code> depends on the value of its 'type attribute'. For more information on <code>&lt;input&gt;</code> values, please see the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input" target="_blank">MDN web docs</a>.</p>
+        <p>As with other elements in the Delta Design System, we try to be as semantic and use the fewest elements as possible to create our forms. We use css transitions to move the <code>&lt;label&gt;</code> out of place and expose the <code>:placeholder</code> when the <code>&lt;input&gt;</code> is in the <code>:focus</code> state.</p>
+        <p>All <code>&lt;input&gt;</code> fields (including <code>&lt;button&gt;</code>) must also include both the <code>&lt;span class=&quot;message&quot;&gt;</code> in order to render the vertical spacing for validation messages properly and eliminate <a href="https://en.wiktionary.org/wiki/jank" target="_blank">jank</a>. To show an <code>.errow</code> or <code>.valid</code> message, simply add a <code>.show</code> class to the appropriate message whenever necessary.</p>
         <section class="row wide">
-          <h2>Section Title</h2>
+          <h2>Input Examples</h2>
+          <div class="row fence fifty">
+            <div class="column">
+              <h3>Text Inputs</h3>
+              <fieldset>
+                <input type="text" name="text-input" id="text-input" placeholder="Placeholder">
+                <label for="text-input">Label</label>
+                <div class="message">
+                  <span class="error">Error message goes here</span>
+                  <span class="valid">Valid message goes here</span>
+                </div>
+              </fieldset>
+            </div>
+            <div class="column">
+              <figure>
+                <figcaption>html</figcaption>
+<pre><code>&lt;fieldset&gt;
+  &lt;input type=&quot;text&quot; name=&quot;text-input&quot; id=&quot;text-input&quot; placeholder=&quot;Placeholder&quot;&gt;
+  &lt;label for=&quot;text-input&quot;&gt;Label&lt;/label&gt;
+  &lt;div class=&quot;message&quot;&gt;
+    &lt;span class=&quot;error&quot;&gt;Error message goes here&lt;/span&gt;
+    &lt;span class=&quot;valid&quot;&gt;Valid message goes here&lt;/span&gt;
+  &lt;/div&gt;
+&lt;/fieldset&gt;</code></pre>
+              </figure>
+            </div>
+          </div>
+          <div class="row fence fifty">
+            <div class="column">
+              <h3>Password Inputs</h3>
+              <fieldset>
+                <input type="password" name="password" id="password" placeholder="Placeholder" autocomplete="on">
+                <label for="password">Label</label>
+                <div id="#password" class="show-hide-password">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" class="show"><path fill="none" d="M0 0h24v24H0z"/><path d="M17.882 19.297A10.949 10.949 0 0 1 12 21c-5.392 0-9.878-3.88-10.819-9a10.982 10.982 0 0 1 3.34-6.066L1.392 2.808l1.415-1.415 19.799 19.8-1.415 1.414-3.31-3.31zM5.935 7.35A8.965 8.965 0 0 0 3.223 12a9.005 9.005 0 0 0 13.201 5.838l-2.028-2.028A4.5 4.5 0 0 1 8.19 9.604L5.935 7.35zm6.979 6.978l-3.242-3.242a2.5 2.5 0 0 0 3.241 3.241zm7.893 2.264l-1.431-1.43A8.935 8.935 0 0 0 20.777 12 9.005 9.005 0 0 0 9.552 5.338L7.974 3.76C9.221 3.27 10.58 3 12 3c5.392 0 9.878 3.88 10.819 9a10.947 10.947 0 0 1-2.012 4.592zm-9.084-9.084a4.5 4.5 0 0 1 4.769 4.769l-4.77-4.769z"/></svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" class="hide"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 3c5.392 0 9.878 3.88 10.819 9-.94 5.12-5.427 9-10.819 9-5.392 0-9.878-3.88-10.819-9C2.121 6.88 6.608 3 12 3zm0 16a9.005 9.005 0 0 0 8.777-7 9.005 9.005 0 0 0-17.554 0A9.005 9.005 0 0 0 12 19zm0-2.5a4.5 4.5 0 1 1 0-9 4.5 4.5 0 0 1 0 9zm0-2a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/></svg>
+                </div>
+                <div class="message">
+                  <span class="error">Error message goes here</span>
+                  <span class="valid">Valid message goes here</span>
+                </div>
+              </fieldset>
+            </div>
+            <div class="column">
+              <figure>
+                <figcaption>html</figcaption>
+<pre><code>&lt;fieldset&gt;
+  &lt;input type=&quot;password&quot; name=&quot;password&quot; id=&quot;password&quot; placeholder=&quot;Placeholder&quot; autocomplete=&quot;on&quot;&gt;
+  &lt;label for=&quot;password&quot;&gt;Label&lt;/label&gt;
+  &lt;div id=&quot;#password&quot; class=&quot;show-hide-password&quot;&gt;
+    &lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot; class=&quot;show&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M17.882 19.297A10.949 10.949 0 0 1 12 21c-5.392 0-9.878-3.88-10.819-9a10.982 10.982 0 0 1 3.34-6.066L1.392 2.808l1.415-1.415 19.799 19.8-1.415 1.414-3.31-3.31zM5.935 7.35A8.965 8.965 0 0 0 3.223 12a9.005 9.005 0 0 0 13.201 5.838l-2.028-2.028A4.5 4.5 0 0 1 8.19 9.604L5.935 7.35zm6.979 6.978l-3.242-3.242a2.5 2.5 0 0 0 3.241 3.241zm7.893 2.264l-1.431-1.43A8.935 8.935 0 0 0 20.777 12 9.005 9.005 0 0 0 9.552 5.338L7.974 3.76C9.221 3.27 10.58 3 12 3c5.392 0 9.878 3.88 10.819 9a10.947 10.947 0 0 1-2.012 4.592zm-9.084-9.084a4.5 4.5 0 0 1 4.769 4.769l-4.77-4.769z&quot;/&gt;&lt;/svg&gt;
+    &lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot; class=&quot;hide&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M12 3c5.392 0 9.878 3.88 10.819 9-.94 5.12-5.427 9-10.819 9-5.392 0-9.878-3.88-10.819-9C2.121 6.88 6.608 3 12 3zm0 16a9.005 9.005 0 0 0 8.777-7 9.005 9.005 0 0 0-17.554 0A9.005 9.005 0 0 0 12 19zm0-2.5a4.5 4.5 0 1 1 0-9 4.5 4.5 0 0 1 0 9zm0-2a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z&quot;/&gt;&lt;/svg&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;message&quot;&gt;
+    &lt;span class=&quot;error&quot;&gt;Error message goes here&lt;/span&gt;
+    &lt;span class=&quot;valid&quot;&gt;Valid message goes here&lt;/span&gt;
+  &lt;/div&gt;
+&lt;/fieldset&gt;</code></pre>
+              </figure>
+            </div>
+          </div>
+          <div class="row fence fifty">
+            <div class="column">
+              <h3>Select Inputs</h3>
+              <fieldset>
+                <select name="select" id="select">
+                  <option value="0">This is a select input</option>
+                  <option value="1">Option 1</option>
+                  <option value="2">Option 2</option>
+                  <option value="3">Option 3</option>
+                  <option value="4">Option 4</option>
+                </select>
+                <label for="select">Label</label>
+                <span class="select-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"/></svg>
+                </span>
+                <div class="message">
+                  <span class="error">Error message goes here</span>
+                  <span class="valid">Valid message goes here</span>
+                </div>
+              </fieldset>
+            </div>
+            <div class="column">
+              <figure>
+                <figcaption>html</figcaption>
+<pre><code>&lt;fieldset&gt;
+  &lt;select name=&quot;select&quot; id=&quot;select&quot;&gt;
+    &lt;option value=&quot;0&quot;&gt;This is a select input&lt;/option&gt;
+    &lt;option value=&quot;1&quot;&gt;Option 1&lt;/option&gt;
+    &lt;option value=&quot;2&quot;&gt;Option 2&lt;/option&gt;
+    &lt;option value=&quot;3&quot;&gt;Option 3&lt;/option&gt;
+    &lt;option value=&quot;4&quot;&gt;Option 4&lt;/option&gt;
+  &lt;/select&gt;
+  &lt;label for=&quot;select&quot;&gt;Label&lt;/label&gt;
+  &lt;span class=&quot;select-icon&quot;&gt;
+    &lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z&quot;/&gt;&lt;/svg&gt;
+  &lt;/span&gt;
+  &lt;div class=&quot;message&quot;&gt;
+    &lt;span class=&quot;error&quot;&gt;Error message goes here&lt;/span&gt;
+    &lt;span class=&quot;valid&quot;&gt;Valid message goes here&lt;/span&gt;
+  &lt;/div&gt;
+&lt;/fieldset&gt;</code></pre>
+              </figure>
+            </div>
+          </div>
+          <div class="row fence fifty">
+            <div class="column">
+              <h3>Checkboxes</h3>
+              <fieldset class="checkbox">
+                <label for="checkbox" class="checkbox">Label<input type="checkbox" name="checkbox" id="checkbox"></label>
+                <div class="message">
+                  <span class="error">Error message goes here</span>
+                  <span class="valid">Valid message goes here</span>
+                </div>
+              </fieldset>
+              <p>We handle checkboxes (and radio buttons and toggle switches) a little differently when it comes to structure in order to achieve the design aesthetic we're aiming for.</p>
+              <p>For checkboxes we wrap the <code>&lt;input&gt;</code> inside the <code>&lt;label&gt;</code>. This is still semantically correct, and we use css to create a design consistent with the other elements of the system.</p>
+            </div>
+            <div class="column">
+              <figure>
+                <figcaption>html</figcaption>
+<pre><code>&lt;fieldset class=&quot;checkbox&quot;&gt;
+  &lt;label for=&quot;checkbox&quot; class=&quot;checkbox&quot;&gt;Label&lt;input type=&quot;checkbox&quot; name=&quot;checkbox&quot; id=&quot;checkbox&quot;&gt;&lt;/label&gt;
+  &lt;div class=&quot;message&quot;&gt;
+    &lt;span class=&quot;error&quot;&gt;Error message goes here&lt;/span&gt;
+    &lt;span class=&quot;valid&quot;&gt;Valid message goes here&lt;/span&gt;
+  &lt;/div&gt;
+&lt;/fieldset&gt;</code></pre>
+              </figure>
+            </div>
+          </div>
+          <div class="row fence fifty">
+            <div class="column">
+              <h3>Radio Buttons</h3>
+              <fieldset class="radio">
+                <label for="radio-one" class="radio">Radio label one<input type="radio" name="radio" id="radio-one"></label>
+                <label for="radio-two" class="radio">Radio label two<input type="radio" name="radio" id="radio-two"></label>
+                <div class="message">
+                  <span class="error">Error message goes here</span>
+                  <span class="valid">Valid message goes here</span>
+                </div>
+              </fieldset>
+            </div>
+            <div class="column">
+              <figure>
+                <figcaption>html</figcaption>
+<pre><code>&lt;fieldset class=&quot;radio&quot;&gt;
+  &lt;label for=&quot;radio-one&quot; class=&quot;radio&quot;&gt;Radio label one&lt;input type=&quot;radio&quot; name=&quot;radio&quot; id=&quot;radio-one&quot;&gt;&lt;/label&gt;
+  &lt;label for=&quot;radio-two&quot; class=&quot;radio&quot;&gt;Radio label two&lt;input type=&quot;radio&quot; name=&quot;radio&quot; id=&quot;radio-two&quot;&gt;&lt;/label&gt;
+  &lt;div class=&quot;message&quot;&gt;
+    &lt;span class=&quot;error&quot;&gt;Error message goes here&lt;/span&gt;
+    &lt;span class=&quot;valid&quot;&gt;Valid message goes here&lt;/span&gt;
+  &lt;/div&gt;
+&lt;/fieldset&gt;</code></pre>
+              </figure>
+            </div>
+          </div>
+          <div class="row fence fifty">
+            <div class="column">
+              <h3>Toggle Switches</h3>
+              <fieldset class="toggle">
+                <label for="toggle" class="toggle">Label<input type="checkbox" name="toggle" class="toggle" id="toggle"></label>
+                <div class="message">
+                  <span class="error">Error message goes here</span>
+                  <span class="valid">Valid message goes here</span>
+                </div>
+              </fieldset>
+            </div>
+            <div class="column">
+              <figure>
+                <figcaption>html</figcaption>
+<pre><code>&lt;fieldset class=&quot;toggle&quot;&gt;
+  &lt;label for=&quot;toggle&quot; class=&quot;toggle&quot;&gt;Label&lt;input type=&quot;checkbox&quot; name=&quot;toggle&quot; class=&quot;toggle&quot; id=&quot;toggle&quot;&gt;&lt;/label&gt;
+  &lt;div class=&quot;message&quot;&gt;
+    &lt;span class=&quot;error&quot;&gt;Error message goes here&lt;/span&gt;
+    &lt;span class=&quot;valid&quot;&gt;Valid message goes here&lt;/span&gt;
+  &lt;/div&gt;
+&lt;/fieldset&gt;</code></pre>
+              </figure>
+            </div>
+          </div>
+          <div class="row fence fifty">
+            <div class="column">
+              <h3>Buttons</h3>
+              <fieldset class="button-input">
+                <input type="button" name="button" id="button" class="button" value="Button" aria-pressed="false">
+              </fieldset>
+              <p><code>&lt;input&gt;</code> elements of type button are rendered as simple push buttons, which can be programmed to control custom functionality as required when assigned an event handler function (typically for the <code>click</code> event).</p>
+              <p><code>&lt;input type=&quot;button&quot;&gt;</code> elements have no default behavior (their cousins, <code>&lt;input type=&quot;submit&quot;&gt;</code> and <code>&lt;input type=&quot;reset&quot;&gt;</code> are used to submit and reset forms, respectively). To make buttons do anything, you have to write JavaScript code to do the work.</p>
+              <p><cite><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/button" target="_blank">&lt;input type=&quot;button&quot;&gt;</a> by <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/button$history" target="_blank">Mozilla Contributors</a> is licensed under <a href="http://creativecommons.org/licenses/by-sa/2.5/" target="_blank">CC-BY-SA 2.5</a>.</cite></p>
+            </div>
+            <div class="column">
+              <figure>
+                <figcaption>html</figcaption>
+<pre><code>&lt;fieldset class=&quot;button-input&quot;&gt;
+  &lt;input type=&quot;button&quot; name=&quot;button&quot; id=&quot;button&quot; class=&quot;button&quot; value=&quot;Button&quot; aria-pressed=&quot;false&quot;&gt;
+&lt;/fieldset&gt;</code></pre>
+              </figure>
+            </div>
+          </div>
         </section>
       </article>
     </main>
